# 4dFactoryGame

./: Cargo.toml  README.md
app/: Cargo.toml
app/fonts/: bmfont_config.bmfc  space_mono.fnt
app/src/: camera.rs  main.rs
math/: Cargo.toml
math/src/: ga.rs  lib.rs  vectors.rs
renderer/: Cargo.toml  build.rs
renderer/shaders/: circles.slang  lines.slang  quads.slang  ray_tracing.slang
renderer/shaders/include/: ray.slang  ui_objects_info.slang
renderer/src/: app.rs  lib.rs  ray_tracing.rs  storage.rs  texture.rs  ui.rs
renderer/src/ui/: font.rs
