[workspace]
resolver = "3"
members = ["app", "math", "renderer"]

[workspace.dependencies]
wgpu = "29.0.1"
winit = "0.30.13"
bytemuck = { version = "1.25.0", features = ["derive"] }
math.path = "math"
renderer.path = "renderer"

[workspace.lints]
rust.elided_lifetimes_in_paths = "deny"
clippy.too_many_arguments = "allow"
